--- a/b.html
+++ b/b.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="a.css">
     <title>Document</title>
+
 </head>
 <body>
     <h1>mnamkozní fungus</h1>
@@ -14,6 +17,6 @@
         uptate minima magnam cumque asperiores quis quam, 
         recusandae to tam sint, cupiditate quas.</h2>
 
-    <p>nám hladíka</p>
+    <p>mám hladíka</p>
 </body>
 </html>
